load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
package(default_visibility = ["//visibility:public"])

bool_flag( name = "yojson", build_setting_default = False )
config_setting(name = "yojson?",
               flag_values = {":yojson": str(True)})

bool_flag( name = "js_of_ocaml-compiler.findlib-support", build_setting_default = False )
config_setting(name = "js_of_ocaml-compiler.findlib-support?",
               flag_values = {":js_of_ocaml-compiler.findlib-support": str(True)})

