package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_binary",
     "ocaml_module",
)

JSOO_MINIFY_DEPS = [
    "//compiler/lib-cmdline:jsoo_cmdline",
    "//compiler/lib:js_of_ocaml_compiler",
    "@cmdliner//lib/cmdliner",
    "@ocaml//compiler-libs/common"
]
JSOO_MINIFY_OPTS = ["-safe-string"]

##############################
####  Executable Targets  ####
#############
ocaml_binary(
    name     = "jsoo_minify.exe",
    exe      = "jsoo_minify",
    opts     = ["-safe-string"],
    main     = "Jsoo_minify",
    manifest = [
        ":Cmd_arg"
    ],
    visibility = ["//visibility:public"],
)

#############################
####  Singleton Targets  ####
ocaml_module(
    name          = "Cmd_arg",
    struct        = "cmd_arg.ml",
    sig           = "cmd_arg.mli",
    deps          = JSOO_MINIFY_DEPS,
)

ocaml_module(
    name          = "Jsoo_minify",
    struct        = "jsoo_minify.ml",
    sig           = "jsoo_minify.mli",
    deps          = JSOO_MINIFY_DEPS + [
        ":Cmd_arg"
    ],
)


