package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_ns_archive",
     "ocaml_module",
)

DEPS_1 = [
    "@cmdliner//lib/cmdliner",
    "//compiler/lib:js_of_ocaml_compiler"
]

#############################
####  Aggregate Targets  ####

#################
ocaml_ns_archive(
    name       = "jsoo_cmdline",
    ns         = "jsoo_cmdline",
    manifest = [
        ":Arg",
        ":Jsoo_cmdline"
    ],
)

######################## Modules & Signatures ########################
ocaml_module(
    name          = "Arg",
    struct        = "arg.ml",
    sig           = "arg.mli",
    deps          = DEPS_1,
)

ocaml_module(
    name          = "Jsoo_cmdline",
    struct        = "jsoo_cmdline.ml",
    deps          = DEPS_1 + [
        ":Arg"
    ],
)


