package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_library",
     "ocaml_module",
)

JSOO_FINDLIB_SUPPORT_ARCHIVE_OPTS = [
        "-linkall"
]

DEPS_1 = [
    "//compiler/lib:js_of_ocaml_compiler",
    "@opam_findlib//lib/findlib"
]

#############################
####  Aggregate Targets  ####

##############
ocaml_library(
    name     = "jsoo_findlib_support",
    manifest   = [
        ":Jsoo_findlib_support"
    ],
)

######################## Modules & Signatures ########################
## this-is-main #f
ocaml_module(
    name          = "Jsoo_findlib_support",
    struct        = "jsoo_findlib_support.ml",
    sig           = "jsoo_findlib_support.mli",
    deps          = DEPS_1,
)

