package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_library",
     "ocaml_module",
)

DEPS_1 = [
    "//compiler/lib:js_of_ocaml_compiler"
]

#############################
####  Aggregate Targets  ####

##############
ocaml_library(
    name     = "js_of_ocaml_compiler_runtime_files",
    manifest   = [
        ":Files",
        ":Js_of_ocaml_compiler_runtime_files"
    ],
)

######################## Modules & Signatures ########################

ocaml_module(
    name          = "Files",
    struct        = "files.ml",
    deps          = DEPS_1,
)

ocaml_module(
    name          = "Js_of_ocaml_compiler_runtime_files",
    struct        = "js_of_ocaml_compiler_runtime_files.ml",
    deps          = DEPS_1 + [
        ":Files"
    ],
)


############################# Rules ##################################

########
genrule(
    outs  = [
        "files.ml"
    ],
    name  = "__files.ml__",
    srcs  = [
        "//runtime:glob_STAR.js"
    ],
    cmd   = " ".join([
        "$(execpath //compiler/lib-runtime-files/gen:gen.exe)",
        "`realpath $(locations //runtime:glob_STAR.js)`",
        "> $@"
    ]),
    exec_tools = [
        "//compiler/lib-runtime-files/gen:gen.exe"
    ]
)

